# SOTA-Simulated-Planning

./: .gitignore  CLAUDE.md  README.md  config.py  generate_transactions.py  pyproject.toml  requirements.txt
.claude/: settings.json
apps/: __init__.py  batch_classification.py  batch_forecast.py
docs/: README_ui_aggregation.md  business_logic_simulation.md  canonical_model_for_saas.md  currency_modeling.md  data_health_checks.md  forecasting_benchmark_selection.md  forecasting_inspection_report.md  forecasting_models_plan.md  forecasting_param_sweep_plan.md  forecasting_param_sweep_results.md  forecasting_parametrizacion.md  lightweight_monorepo_architecture.md  output_er_model.md  plan_backtest_chart_ui.md  plan_opcion_c_y_refactor_pipelines.md  purchase_data_schema.md  repo_status_audit_2026-03-27.md  system_log_module.md  technical_debt_register.md
experiments/: exp_01_horse_race_muestra.py  exp_02_catalog_eval.py  exp_03_param_sweep.py
notebooks/: 01_forecast_exploracion_sku.ipynb  02_catalog_evaluation.ipynb
output/: dataset_manifest.json  internal_transfers.csv  product_catalog.csv  purchase_order_lines.csv  purchase_orders.csv  purchase_receipts.csv  transactions.csv
planning_core/: __init__.py  classification.py  classification_store.py  paths.py  preprocessing.py  repository.py  services.py  system_log.py  validation.py
tests/: test_api.py  test_backtest_selector.py  test_classification_store.py  test_diagnostics.py  test_evaluation.py  test_forecast_store.py  test_inventory.py  test_metrics.py  test_models.py  test_purchase.py  test_services.py  (+1 more)
(+55 files in other folders)
