[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sota-simulated-planning"
version = "0.1.0"
description = "Simulacion, exploracion y visualizacion liviana para demand planning."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
viz = [
    "streamlit>=1.36",
    "plotly>=5.24",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["planning_core*", "apps*"]
